src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/CD4AC2002.cd
package de.cd4analysis.cocos;

classdiagram CD4AC2002 {
  class A {
    String b;
    private String c;
    static String d;
  }

  interface I {
    static String a;
  }
}