src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/CD4AC2001.cd
package de.cd4analysis.cocos;

classdiagram CD4AC2001 {
  interface A {
    String a;
    private String b;
    protected String c;
    public String d;
    final String e;
    derived String f;
  }
}